Correção do cabeçalho

--- a/Exercicios_GDB/lista01.tex
+++ b/Exercicios_GDB/lista01.tex
@@ -45,22 +45,21 @@
     }
 }
 % Cabeçalho
-\newcommand{\professor}{Prof. Kennedy Lopes}
-\newcommand{\turma}{Algoritmos e Estrutura de Dados II}
-\newcommand{\ano}{2023}
-\newcommand{\periodo}{1º Semestre}
+\newcommand{\professor}{Kennedy Lopes\\Marcos Mikael}
+\newcommand{\turma}{Laboratório de Algoritmos\\ e Estrutura de Dados II}
+\newcommand{\ano}{2023\\}
+\newcommand{\periodo}{3º Semestre}
 
 % Configuração do cabeçalho
 \fancyhead{}
 \fancyhead[L]{\professor}
 \fancyhead[C]{\turma}
-\fancyhead[R]{\ano, \periodo}
+\fancyhead[R]{\ano \periodo}
 
 \setlength{\headheight}{14.49998pt}
 \addtolength{\topmargin}{-2.49998pt}
 
 \begin{document}
-
 \begin{center}
     \LARGE \textbf{Lista de exercícios (GDB)}
 \end{center}
