--- a/06 - Compressão de Dados/huffman.tex
+++ b/06 - Compressão de Dados/huffman.tex
@@ -513,14 +513,14 @@
         \begin{column}[t]{0.30\textwidth}
             \begin{itemize}\setlength\itemsep{0.1em}
                 \item [U]$\rightarrow 10000$
-                \item [d]$\rightarrow 1000010$
-                \item [m]$\rightarrow 1000011$
+                \item [m]$\rightarrow 1000010$
+                \item [d]$\rightarrow 1000011$
                 \item [p]$\rightarrow 0010$
                 \item [o]$\rightarrow 0011$
                 \item [g]$\rightarrow 0000$
                 \item [a]$\rightarrow 0001$
                 \item [i]$\rightarrow 1001$
-                \item [d]$\rightarrow 100010$
+                \item [e]$\rightarrow 100010$
                 \item [s]$\rightarrow 011$
                 \item [r]$\rightarrow 100$
                 \item [t]$\rightarrow 111$
@@ -535,21 +535,21 @@
     \frametitle{Análise do armazenamento}
     \begin{center}
         \begin{tabular}{c|c|c|c}
-            char & Representação & COL & COL \\
+            char & bin     & bits & freq \\
             \hline
-            U    &               &     &     \\
-            d    &               &     &     \\
-            m    &               &     &     \\
-            p    &               &     &     \\
-            o    &               &     &     \\
-            g    &               &     &     \\
-            a    &               &     &     \\
-            i    &               &     &     \\
-            d    &               &     &     \\
-            s    &               &     &     \\
-            r    &               &     &     \\
-            t    &               &     &     \\
-            -    &               &     &     \\
+            U    & 10000   & 5    &     1\\
+            d    & 1000010 & 7    &1     \\
+            m    & 1000011 & 7    &  1   \\
+            p    & 0010    & 4    &   2  \\
+            o    & 0011    & 4    &   2  \\
+            g    & 0000    & 4    &   2  \\
+            a    & 0001    & 4    &   3  \\
+            i    & 1001    & 4    &   3  \\
+            e    & 100010  & 6    &   4  \\
+            s    & 011     & 3    &     \\
+            r    & 100     & 3    &     \\
+            t    & 111     & 3    &     \\
+            -    & 100     & 3    &     \\
         \end{tabular}
     \end{center}
 
